argo_test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: pro
