argo_test/was.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: was-dep
  labels:
    app: was
spec:
  replicas: 2
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      containers:
      - name: was
        image: momscritical/flask-app:v1.0
        ports:
        - containerPort: 80
      tolerations:
      - key: "was"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: was-svc
spec:
  selector:
    app: was
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
