argo_test/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 2
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: conf
            mountPath: /etc/nginx/conf.d
      volumes:
        - name: conf
          configMap:
            name: conf   
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: web-svc
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32706
  type: NodePort
  # type: LoadBalancer
